# projectdevpulse

./: .gitignore  CMakeLists.txt  Execution Pipeline.txt  LICENSE  README.md  build.bat  build.sh  clean.sh  devpulse.manifest  devpulse.rc  devpulse.toml  readme.md  run.sh  setup.iss  vcpkg.json
scripts/: install_deps.sh
src/: app.cpp  app.h  main.cpp
src/core/: gitreader.py  sysreader.c  sysreader.h  sysreader_win.cpp
src/panels/: git_panel.cpp  git_panel.h  log_panel.cpp  log_panel.h  process_panel.cpp  process_panel.h  system_panel.cpp  system_panel.h  task_panel.cpp  task_panel.h
src/utils/: config.cpp  config.h
